tests/bad/value_enums/constructor_extra_argument.oc
/// fail: Unexpected argument, expected only 2

enum Foo {
    Case0(x: i32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello", 1, 2)
}